@@ -1,3 +1,8 @@
+2013-04-04  Sandra Loosemore  <sandra@codesourcery.com>
+
+	* gdb.linespec/linespec.exp: Make dir/file:line tests
+	conditional for non-remote hosts only.
+
 2013-04-04  Stan Shebs  <stan@codesourcery.com>
 	    Pedro Alves  <palves@redhat.com>
 
